
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;
import "classificationresult.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message ClassificationResults {

  /*-- fields --*/
  repeated caikit_data_model.nlp.ClassificationResult results = 1;
}
