
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.Nlp;
import "s3path.proto";
import "textgenerationtasktextgenerationtrainparameters.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message TextGenerationTaskTextGenerationTrainRequest {

  /*-- fields --*/
  string model_name = 1;
  caikit_data_model.common.S3Path output_path = 2;
  caikit.runtime.Nlp.TextGenerationTaskTextGenerationTrainParameters parameters = 3;
}
