
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;
import "tokenclassificationresult.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message TokenClassificationResults {

  /*-- fields --*/
  repeated caikit_data_model.nlp.TokenClassificationResult results = 1;
}
