
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;
import "tokenclassificationresult.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message TokenClassificationStreamResult {

  /*-- fields --*/
  repeated caikit_data_model.nlp.TokenClassificationResult results = 1;
  int64 processed_index = 2;
}
